--- a/Slovak/main/HTMLViewer.apk/res/values-sk/strings.xml
+++ b/Slovak/main/HTMLViewer.apk/res/values-sk/strings.xml
@@ -133,7 +133,7 @@
     <string name="tuesday_short">Uto</string>
     <string name="tuesday_shortest">U</string>
     <string name="user_agreement">Zmluvné podmienky</string>
-    <string name="user_experience_program">Program používateľskej skúsenosti</string>
+    <string name="user_experience_program">Program používateľských skúseností</string>
     <string name="user_manual">Príručka používateľa</string>
     <string name="wednesday">Streda</string>
     <string name="wednesday_short">Str</string>
