--- a/Slovak/main/BugReport.apk/res/values-sk/strings.xml
+++ b/Slovak/main/BugReport.apk/res/values-sk/strings.xml
@@ -150,7 +150,7 @@
     <string name="module_finance">Finance &amp; Mi Wallet</string>
     <string name="module_item_less">Skryť</string>
     <string name="module_item_more">Viac</string>
-    <string name="module_medias">Média</string>
+    <string name="module_medias">Médiá</string>
     <string name="module_more">Viac</string>
     <string name="module_network">Pripojenie</string>
     <string name="module_search">Vyhľadať</string>
